--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -65,19 +65,25 @@ const pricingData = [
 				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Nincs többé felesleges sorbanállás</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
-							
+							Senki sem szeret sorbanállni. Főleg, egy hosszú út után. És egy hotelbe vagy hostelbe érkező vendég általában hosszú utat tett meg, mire eljut a check-in deskhez. Átvitt, digitális és valós értelemben is, hiszen a "digital journey" már jóval a foglalás előtt elkezdődött, nem csupán helyszínre érkezésekor. És tovább tart, mint a szállás elhagyása, hiszen a közös célunk, hogy visszatérő vevővé váljon, amit a visszajezés, ajánlás, értékelés gyűjtésével és további ajánlatokkal tudunk elősegíteni, természetesen a minőségi szolgáltatás nyújtása mellett. 
 				</section>
 
 				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Ügyfélélmény emelése egyszerűen</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
-						y
+						Ügyfélhívó és sorszámosztó rendszerünkkel nem csupán a recepció előtti sort lehet felszámolni, hanem az előbb említett digitális user journey-be is beépíthető, és a sorbanállás nélküli bejelentkezés hirdetésével megkülönböztetheti magát a versenytársaktól amivel növelheti a foglalási konverziót is. 
+						<br><br>
+						Az álldogálás, toporgás és várakozás helyett leültethetjük vendégeinket, és hellyel kínálni a vendégünket ebben az iparágban, pláne egy hosszú út után, kiemelten fontos. A limitált recepciós kapacitás miatt a várakozás teljesen nem számolható fel, de nem mindegy, hogy az milyen körülmények között telik. Főleg, hogy ez az első személyes élménye a márkánkkal. Minden helyzetben a tájékoztatás a kulcs. Az ügyfélhívó és sorszámosztó kiosk-nak köszönhetően nem bizonytalanságban és kényelmetlenségben tölti az első perceket hostelünkben, szállodánkban, hanem már előre tudta, hogyan fog gyorsan zajlani a bejelentkezés és azt is látja, hogy várhatóan mikor kerül sorra. Ezt a kényelemben töltött időt pedig a számára megfelelő dolgokkal töltheti. Mindezt játékossággal kiegészítve új szintre emeljük az ügyfélkiszolgálást. 
 					</p>
 				</section>
 				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Nem csak költséget csökkent, plusz bevételt is termel</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
-						z	
+						Kényelmet, időt adunk ezzel vendégeinknek, de az ügyfélélmény tovább fokozható, ami ráadásul az elégedett, visszatérő vendégen túl, további bevételt jelent számunkra. A várakozás alatt akár - kedvezményesen - fogyaszthat, vagy további szolgáltatásokat vehet igénybe tőlünk. Mindezen akciókat akár a rendszeren keresztül is közvetíthetjük számára (ügyfélkijelzőn vagy üzenetben). Az emberek túlterheltek üzenetek által, de a mobil értesítések megnyitása nagyon magas számú. A bejelentkezés (az ügyfélkijelzőn) történő behívás mellett mobilra küldöt üzenettel is megvalósulhat, ezzel megnyitjuk az utat, hogy amíg a helyszínen tartózkodik a vendég, vagy akár még utána is, további üzenetekt küldjünk számára. 
+						<br><br>
+						Számításank szerint a renszer bevezetése ilyen extra bevételek nélkül is gyorsan megtérül, például a pontos statisztiáknak köszönhetően akár a recepciósok teljesítménye, vagy kapacitás tervezése is lehetővé válik. 
+						<br><br>
+						Az informatika gyors fejlődésének és az árcsökkennésének köszönhetően ma már komolyabb beruházás nélkül lehet egy ügyfélhívó rendszert bevezetni és használni a különböző területeken. 
 					</p>
 				</section>
 			</div>
