--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -168,7 +168,6 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
       hungarySelector.selected = true;
       englishSelector.selected = false;
       if (window.location.pathname.startsWith("/hu/category")) {
-        console.log("1st");
         const param = window.location.pathname.split("category")[1].replaceAll("/", "");
         const prams = categories[decodeURIComponent(param)];
         const url = window.location.pathname.replace(param, prams).replace("/hu", "");
@@ -177,11 +176,9 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
       }
 
       if (window.location.pathname.startsWith("/hu/tag")) {
-        const param = window.location.pathname.split("tag")[1].replaceAll("/", "");
-        const prams = tag[decodeURIComponent(param)];
-        const url = window.location.pathname.replace(param, prams).replace("/hu", "");
-        englishSelector.value = url;
-        hungarySelector.value = decodeURIComponent(window.location.pathname);
+        const param = window.location.pathname;
+        englishSelector.value = param.replace("/hu", "");
+        hungarySelector.value = param;
       }
 
       const param = window.location.pathname.split("/hu")[1].replaceAll("/", "");
@@ -210,11 +207,9 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
       }
 
       if (window.location.pathname.startsWith("/tag")) {
-        const param = window.location.pathname.split("tag")[1].replaceAll("/", "");
-        const prams = tag[decodeURIComponent(param)];
-        const url = window.location.pathname.replace(param, prams);
-        englishSelector.value = window.location.pathname;
-        hungarySelector.value = `/hu${url}`;
+        const param = window.location.pathname;
+        englishSelector.value = param;
+        hungarySelector.value = `/hu${param}`;
       }
 
       const param = window.location.pathname.split("/")[1];
@@ -227,7 +222,6 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
         englishSelector.value = window.location.pathname;
       } else {
         const url = window.location.pathname.replace(param, prams);
-        console.log("===> ~ file: languageselector.astro:230 ~ url:", url);
         hungarySelector.value = `/hu${url}`;
         englishSelector.value = window.location.pathname;
       }
