--- a/src/pages/[...blog]/[tag]/[...page].astro
+++ b/src/pages/[...blog]/[tag]/[...page].astro
@@ -9,25 +9,29 @@ import Pagination from "@components/blog/pagination.astro";
 
 changeLanguage("en");
 
-export async function getStaticPaths({ paginate }) {changeLanguage('en')
-    const posts = await getCollection("blog", ({ data }) => {
-        return !data.draft && data.publishDate < new Date();
-    });
-    const localizedPosts = posts.filter((page) => {
-        const [lang, ...slug] = page.slug.split("/");
-        return lang === i18next.language;
-    });
-    const tags = new Set();
-    localizedPosts.map((post) => {
-        Array.isArray(post.data.tags) &&
-            post.data.tags.map((tag) => tags.add(tag.toLowerCase()));
-    });
-    return Array.from(tags).map((tag: string) => paginate(localizedPosts.filter((post) => Array.isArray(post.data.tags) &&
-        post.data.tags.find((elem) => elem.toLowerCase() === tag)), {
+export async function getStaticPaths({ paginate }) {
+  changeLanguage("en");
+  const posts = await getCollection("blog", ({ data }) => {
+    return !data.draft && data.publishDate < new Date();
+  });
+  const localizedPosts = posts.filter((page) => {
+    const [lang, ...slug] = page.slug.split("/");
+    return lang === i18next.language;
+  });
+  const tags = new Set();
+  localizedPosts.map((post) => {
+    Array.isArray(post.data.tags) && post.data.tags.map((tag) => tags.add(tag.toLowerCase()));
+  });
+  return Array.from(tags).map((tag: string) =>
+    paginate(
+      localizedPosts.filter((post) => Array.isArray(post.data.tags) && post.data.tags.find((elem) => elem.toLowerCase() === tag)),
+      {
         params: { tag: tag, blog: "tag" || undefined },
         pageSize: 6,
         props: { tag },
-    }));
+      }
+    )
+  );
 }
 const { page, tag } = Astro.props;
 ---
