[FIX] content plus translation

--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -135,6 +135,7 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
     "készletértékelésről-röviden-az-erpnext-rendszerben": "inventory-valuation-in-erpnext-system",
     "correcting-warehouse-stock-and-product-valuation-in-erpnext": "raktárkészlet-és-termékérték-javítása",
     "raktárkészlet-és-termékérték-javítása": "correcting-warehouse-stock-and-product-valuation-in-erpnext",
+    "magyar-mikrogazdálkodói-számlatükör": "hungarian-micro-enterprise-chart-of-accounts",
   };
 
   const links = {
