fix: language selector paths

--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -16,7 +16,7 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
     class="appearance-none mx-1 cursor-pointer pl-3 pr-2 py-1.5 rounded-md dark:bg-stone-900 dark:text-white focus-visible:outline-none">
     <option value="/" id="english">English</option>
 
-    <option value="/hu" id="hungary">Magyar</option>
+    <option value="/hu/" id="hungary">Magyar</option>
   </select>
 </div>
 
@@ -136,8 +136,8 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
     "raktárkészlet-és-termékérték-javítása": "correcting-warehouse-stock-and-product-valuation-in-erpnext",
     "magyar-mikrogazdálkodói-számlatükör": "hungarian-micro-enterprise-chart-of-accounts",
     "hungarian-micro-enterprise-chart-of-accounts": "magyar-mikrogazdálkodói-számlatükör",
-    "ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer": "queue-management-system.astro",
-    "queue-management-system.astro": "ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer",
+    "ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer": "queue-management-system",
+    "queue-management-system": "ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer",
   };
 
   const links = {
