--- a/src/components/LetsTalk.astro
+++ b/src/components/LetsTalk.astro
@@ -1,7 +1,11 @@
+---
+import Link from "@components/ui/link.astro";
+---
+
 <section class="py-8 items-center px-4 bg-[#EEF0F2] dark:bg-[#020616] rounded-xl flex justify-between w-full">
-    <div>
-        <h2 class="my-3 text-[30px] dark:text-white text-[#192734] font-bold">You don't need more business management software.</h2>
-        <span class="text-[#192734] dark:text-white">ERPNext is the solid foundation.</span>
-    </div>
-    <a href="/contact" class=" dark:text-white cursor-pointer text-2xl font-semibold text-gray-700" >Let's talk! > </a>
+  <div>
+    <h2 class="my-3 text-[30px] dark:text-white text-[#192734] font-bold">You don't need more business management software.</h2>
+    <span class="text-[#192734] dark:text-white">Monolithon deliver the best solution for you quickly.</span>
+  </div>
+  <Link href="/contact" class="dark:text-white cursor-pointer text-2xl font-semibold text-gray-700 mr-2">Let's talk!</Link>
 </section>
