refactor: navbar logo update

--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -111,7 +111,9 @@ const pricingData = [
     <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-20" id="pricing">
       {pricingData.map((item) => <Pricing plan={item} />)}
     </div>
-    <section>*A felhasználók száma nem korlátozott, de az optimalizált erőforrás limitált.</section>
+    <section>
+      <span class="dark:text-white text-black">*A felhasználók száma nem korlátozott, de az optimalizált erőforrás limitált.</span>
+    </section>
     <!-- <Logos /> -->
     <LetsTalk />
   </Container>
