--- a/src/pages/queue-management-system.astro
+++ b/src/pages/queue-management-system.astro
@@ -105,7 +105,9 @@ const pricingData = [
       {pricingData.map((item) => <Pricing plan={item} />)}
     </div>
 
-    <section>*A felhasználók száma nem korlátozott, de az optimalizált erőforrás limitált.</section>
+    <section>
+      <span class="dark:text-white text-black">*A felhasználók száma nem korlátozott, de az optimalizált erőforrás limitált.</span>
+    </section>
     <LetsTalk />
   </Container>
 </Layout>
