--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -23,17 +23,17 @@ export const menuitems = [
 	{
 		title: "CMS & eCommerce",
 		children: [
-			{ title: "VueStoreFront", path: "#" },
+			{ title: "VueStoreFront", path: "path_header.vue-storefront" },
 		],
 	},
 	{
 		title: "Queue Management System",
-		path: "#",
+		path: "path_header.qms",
 	},
 	{
 		title: "Integration & Automation",
 		children:[
-			{ title: "n8n", path: "#" },
+			{ title: "n8n", path: "path_header.n8n" },
 	]
 	},
 ];
