--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -34,7 +34,7 @@ const pricingData = [
     name: "Premium",
     price: "Egyedi",
     popular: false,
-    features: ["Minden a Standard csomagból, plusz:", "Extra erőforrás", "Egyedi igények megvalósítása", "Extra támogatás"],
+    features: ["Minden a Standard csomagból, plusz:", "Extra erőforrás", "Egyedi igények megvalósítása", "Extra támogatás", "Helyi telepítés & Offline hozzáférés"],
     button: {
       text: "Beszéljünk!",
       link: "/hu/kapcsolat",
@@ -51,7 +51,7 @@ const pricingData = [
           <h1 class="text-[60px] leading-none font-semibold">Ügyfélhívó, sorszámosztó kiosk renszer.</h1>
           <h2 class="text-xl text-[#192734] dark:text-white my-4">Hostelek és hotelek részére.</h2>
           <a href="#pricing">
-            <Button class="md:px-3 md:py-2 leading-6" style="primary">Packages</Button>
+            <Button class="md:px-3 md:py-2 leading-6" style="primary">Csomagok</Button>
           </a>
         </div>
         <div>
