--- a/src/pages/queue-management-system.astro
+++ b/src/pages/queue-management-system.astro
@@ -13,30 +13,30 @@ const pricingData = [
     name: "Simple",
     price: "€299",
     popular: false,
-    features: ["Havidíj/lokáció", "Korlátlan felhasználó", "Korlátlan vendég", "Korlátlan kiosk", "Korlátlan kijelző", "Korlátlan forgalom*"],
+    features: ["Monthly fee/location", "Unlimited user", "Unlimited guest", "Unlimited kiosk", "Unlimited display", "Unlimited traffic*"],
     button: {
-      text: "Beszéljünk!",
-      link: "/hu/kapcsolat",
+      text: "Let's talk!",
+      link: "/contact",
     },
   },
   {
     name: "Standard",
     price: "€599",
     popular: true,
-    features: ["Minden a Simple csomagból, plusz:", "API hozzáférés integrációkhoz", "Leküldött értesítés (Push notification)"],
+    features: ["Simple features plus:", "API access to integrate", "Push notification"],
     button: {
-      text: "Beszéljünk!",
-      link: "/hu/kapcsolat",
+      text: "Let's talk!",
+      link: "/contact",
     },
   },
   {
     name: "Premium",
     price: "Egyedi",
     popular: false,
-    features: ["Minden a Standard csomagból, plusz:", "Extra erőforrás", "Egyedi igények megvalósítása", "Extra támogatás"],
+    features: ["Standard features plus:", "Extra resources", "Customization", "Priority support", "Local installation & offline access"],
     button: {
-      text: "Beszéljünk!",
-      link: "/hu/kapcsolat",
+      text: "Let's talk!",
+      link: "/contact",
     },
   },
 ];
@@ -50,7 +50,7 @@ const pricingData = [
           <h1 class="text-[60px] leading-none font-semibold">Customer Call, Queue Management Kiosk System.</h1>
           <h2 class="text-xl text-[#192734] dark:text-white my-4">For Hostels and Hotels.</h2>
           <a href="#pricing">
-            <Button class="md:px-3 md:py-2 leading-6" style="primary">Packages</Button>
+            <Button class="md:px-3 md:py-2 leading-6" style="primary">Plans</Button>
           </a>
         </div>
         <div>
@@ -106,7 +106,7 @@ const pricingData = [
     </div>
 
     <section>
-      <span class="dark:text-white text-black">*A felhasználók száma nem korlátozott, de az optimalizált erőforrás limitált.</span>
+      <span class="dark:text-white text-black">*The number of users is not limited, but the optimized resources are limited.</span>
     </section>
     <LetsTalk />
   </Container>
