--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -12,7 +12,7 @@ changeLanguage("hu");
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">Kapcsolat</Fragment>
-			<Fragment slot="desc">Vegye fel a kapcsolatot.</Fragment>
+			<Fragment slot="desc">Vegye fel velünk a kapcsolatot.</Fragment>
 		</Sectionhead>
 		<style type="text/css" scoped>
 			.mauticform_wrapper {
@@ -137,8 +137,8 @@ changeLanguage("hu");
 				<div class="mx-auto max-w-2xl space-y-16 divide-y divide-gray-100 lg:mx-0 lg:max-w-none">
 					<div class="md:flex">
 						<div>
-							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Gede Tibor</h2>
-							<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Kapcsolattartó</br>
+							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Ügyfélszolgálat:</h2>
+							<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Gede Tibor - Kapcsolattartó</br>
 							Budapest</br>
 							Magyarország</br>
 							+36 30 7192 418</br>
