--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -136,8 +136,8 @@ changeLanguage("en");
 			<div class="mx-auto max-w-2xl space-y-16 divide-y divide-gray-100 lg:mx-0 lg:max-w-none">
 				<div class="md:flex">
 					<div>
-						<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Tibor Gede</h2>
-						<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">
+						<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Monlithon Support:</h2>
+						<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Tibor Gede - founder</br>
 							Budapest</br>
 							Hungary</br>
 							+36 30 7192 418</br>
