feat: added navbar menu item translation

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -20,17 +20,17 @@ export const menuitems = [
 		],
 	},
 	{
-		title: "CMS & eCommerce",
+		title: "header.cms_eCommerce",
 		children: [
 			{ title: "VueStoreFront", path: "path_header.vue-storefront" },
 		],
 	},
 	{
-		title: "Queue Management System",
+		title: "header.qms_nav",
 		path: "path_header.qms",
 	},
 	{
-		title: "Integration & Automation",
+		title: "header.integration_nav",
 		children:[
 			{ title: "n8n", path: "path_header.n8n" },
 	]
