[FIX] edit content

--- a/src/pages/hu/jogok.astro
+++ b/src/pages/hu/jogok.astro
@@ -169,7 +169,7 @@ changeLanguage("hu");
 			<p>8000</p>
 			<p>Magyarország</p>
 			<p>Adószám: 42985550-1-27</p>
-			<p><a href="https://www.monolithon.com/contactus">Vegye fel velünk a kapcsolatot</a></p>
+			<p><a href="https://www.monolithon.com/contact">Vegye fel velünk a kapcsolatot</a></p>
 		</div>
 	</Container>
 </Layout>
