--- a/src/pages/legal.astro
+++ b/src/pages/legal.astro
@@ -192,7 +192,7 @@ changeLanguage("en");
 			<p>8000</p>
 			<p>Hungary</p>
 			<p>TAX ID: 42985550-1-27</p>
-			<p><a href="https://www.monolithon.com/contactus">Contact us</a></p>
+			<p><a href="https://www.monolithon.com/contact">Contact us</a></p>
 		</div>
 	</Container>
 </Layout>
