--- a/src/pages/queue-management-system.astro
+++ b/src/pages/queue-management-system.astro
@@ -16,7 +16,7 @@ const pricingData = [
     features: ["Monthly fee/location", "Unlimited user", "Unlimited guest", "Unlimited kiosk", "Unlimited display", "Unlimited traffic*"],
     button: {
       text: "Let's talk!",
-      link: "/contact",
+      link: "path_header.primary_button_text",
     },
   },
   {
@@ -26,7 +26,7 @@ const pricingData = [
     features: ["Simple features plus:", "API access to integrate", "Push notification"],
     button: {
       text: "Let's talk!",
-      link: "/contact",
+      link: "path_header.primary_button_text",
     },
   },
   {
@@ -36,7 +36,7 @@ const pricingData = [
     features: ["Standard features plus:", "Extra resources", "Customization", "Priority support", "Local installation & offline access"],
     button: {
       text: "Let's talk!",
-      link: "/contact",
+      link: "path_header.primary_button_text",
     },
   },
 ];
