fix: navbar css

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -169,7 +169,7 @@ export const menuitems = [
 		/* CSS */
 		/* The 'show' class will be used to toggle visibility of the navigation */
 		#nav {
-			display: none; /* Start with the navigation hidden */
+			display: flex; /* Start with the navigation hidden */
 		}
 
 		#nav.show {
