Revert "fix: navbar css (#21)"
This reverts commit f4591a64ce6598c878b4358e555df70470f47d9d.

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -169,7 +169,7 @@ export const menuitems = [
 		/* CSS */
 		/* The 'show' class will be used to toggle visibility of the navigation */
 		#nav {
-			display: flex; /* Start with the navigation hidden */
+			display: none; /* Start with the navigation hidden */
 		}
 
 		#nav.show {
