--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -40,7 +40,7 @@ export async function getStaticPaths({ paginate }) {changeLanguage('en')
 const { page } = Astro.props;
 ---
 
-<Layout title="Blog">
+<Layout title="Blog" lang="en">
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">Our Blog</Fragment>
