--- a/src/components/blog/posts.astro
+++ b/src/components/blog/posts.astro
@@ -1,6 +1,7 @@
 ---
 import { localizePath } from "astro-i18next";
 import { Icon } from "astro-icon";
+import { Image } from "astro:assets";
 
 export interface Props {
 	posts: Array<any>;
@@ -15,9 +16,10 @@ const { posts } = Astro.props;
 			posts.map((blogPostEntry, index) => (
 				<article class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-stone-950 px-8 pb-8 pt-32 sm:pt-64 lg:pt-30">
 					<img
-						src={blogPostEntry.data.image.src}
+						src={`/images/${blogPostEntry.data.image.src}`}
 						alt={blogPostEntry.data.image.alt}
 						class="absolute inset-0 -z-10 h-full w-full object-cover"
+
 					/>
 					<div class="absolute inset-0 -z-10 bg-gradient-to-t from-gray-900 via-gray-900/40" />
 					<div class="absolute inset-0 -z-10 rounded-2xl ring-1 ring-inset ring-gray-900/10" />
