--- a/src/pages/hu/blog/[slug].astro
+++ b/src/pages/hu/blog/[slug].astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon";
 import { localizePath } from "astro-i18next";
 import { getArticleReadingTime } from "@utils/blog";
 
-changeLanguage("it");
+changeLanguage("hu");
 
 // Generate a new path for every collection post
 export async function getStaticPaths() {changeLanguage('it')
