--- a/src/pages/hu/blog/category/[category].astro
+++ b/src/pages/hu/blog/category/[category].astro
@@ -7,7 +7,7 @@ import Posts from "@components/blog/posts.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Pagination from "@components/blog/pagination.astro";
 
-changeLanguage("it");
+changeLanguage("hu");
 
 export async function getStaticPaths() {changeLanguage('it')
     const posts = await getCollection("blog", ({ data }) => {
