--- a/src/pages/blog/category/[category].astro
+++ b/src/pages/blog/category/[category].astro
@@ -40,7 +40,7 @@ const { posts, category, lang } = Astro.props;
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">{category}</Fragment>
-			<Fragment slot="desc">We write about building startups and thoughts going on our mind.</Fragment>
+			<Fragment slot="desc">ERPNext and Frappe news for beginners and advanced users.</Fragment>
 		</Sectionhead>
 		<Posts posts={posts} />
 	</Container>
