--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -109,7 +109,7 @@ export const menuitems = [
 								<div class="px-2 py-2 rounded-md shadow dark:bg-gray-800">
 									{ item.children.map((subitem) =>
 										<Link
-											href={localizePath(subitem.path)}
+											href={localizePath(t(subitem.path))}
 											style="hover"
 											size="sm"
 											class="block"
@@ -135,7 +135,7 @@ export const menuitems = [
 						</div>
 					) : (
 						<Link
-							href={localizePath(item.path)}
+							href={localizePath(t(item.path))}
 							style="hover"
 							size="sm"
 							x-data="{ isActive: false }"
@@ -151,7 +151,7 @@ export const menuitems = [
 								window.addEventListener('popstate', checkPath);
 							}`}
 							:class="{ 'bg-gray-200 dark:bg-gray-600': isActive }"
-							data-path={item.path}
+							data-path={t(item.path)}
 						>
 							{t(item.title)}
 						</Link>
